added modlines for js highlighting

--- a/random_autoindex_item.html
+++ b/random_autoindex_item.html
@@ -1,3 +1,5 @@
+<!-- vim: set ft=javascript: -->
+
 <a href="javascript:(function(){
     function random_item(items){
       return items[Math.floor(Math.random()*items.length)];
